# llvm-idiom-recognition-pass

./: README.md
llvm-pattern-select-main/: CMakeLists.txt  README.md  evaluate.py
llvm-pattern-select-main/src/: PatternRules.cpp  PatternRules.h  PatternSelectPass.cpp
llvm-pattern-select-main/tests/: base.ll  bench_base  check_all.sh  negative_input.ll  negative_tests.c  opt.ll  opt.s  positive_input.ll  positive_tests.c  positives_tests.out.ll  raw.ll
